--- a/ManagingProducts.Web/ManagingProducts.Web.csproj
+++ b/ManagingProducts.Web/ManagingProducts.Web.csproj
@@ -181,6 +181,7 @@
     <Compile Include="Controllers\BaseController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
+    <Compile Include="Controllers\OperationController.cs" />
     <Compile Include="Controllers\ProductController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -337,6 +338,7 @@
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Views\Base\" />
+    <Folder Include="Views\Operation\" />
     <Folder Include="Views\ProductStatistic\" />
   </ItemGroup>
   <ItemGroup>
