--- a/ManagingProducts.DAL/ManagingProducts.DAL.csproj
+++ b/ManagingProducts.DAL/ManagingProducts.DAL.csproj
@@ -55,7 +55,15 @@
     <Compile Include="Entities\User.cs" />
     <Compile Include="IRepositories\IRepository.cs" />
     <Compile Include="ManagingProductContext.cs" />
-    <Compile Include="ManagingProductsDbInitializer.cs" />
+    <Compile Include="Migrations\201605272309490_InitialCreate.cs" />
+    <Compile Include="Migrations\201605272309490_InitialCreate.Designer.cs">
+      <DependentUpon>201605272309490_InitialCreate.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201605272313545_Initial.cs" />
+    <Compile Include="Migrations\201605272313545_Initial.Designer.cs">
+      <DependentUpon>201605272313545_Initial.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Entities\Repositories\Repository.cs" />
   </ItemGroup>
@@ -65,6 +73,14 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Scripts\Create_tables.sql" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201605272309490_InitialCreate.resx">
+      <DependentUpon>201605272309490_InitialCreate.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201605272313545_Initial.resx">
+      <DependentUpon>201605272313545_Initial.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
