--- a/ManagingProducts.Web/ManagingProducts.Web.csproj
+++ b/ManagingProducts.Web/ManagingProducts.Web.csproj
@@ -183,6 +183,7 @@
     <Compile Include="Controllers\ManageController.cs" />
     <Compile Include="Controllers\OperationController.cs" />
     <Compile Include="Controllers\ProductController.cs" />
+    <Compile Include="Controllers\TypeOfOperationController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -337,9 +338,11 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Scripts\ManagingProducts\" />
     <Folder Include="Views\Base\" />
     <Folder Include="Views\Operation\" />
     <Folder Include="Views\ProductStatistic\" />
+    <Folder Include="Views\TypeOfOperation\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
